readability fixed on html

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
     box-sizing: inherit;
     margin: 0;
 }
-body{
+main{
     background-color: rgba(250,250,250,255) ;
     margin: 0;
     min-height: 100vh;
@@ -14,13 +14,12 @@ body{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
 }
-body>*{
+main>*{
     background-color:#ffffff;
     border-radius: 0.5rem;
     margin: 0.5rem 2rem ;
     box-shadow: 1px 6px 8px 3px #ccc;
 }
-
 header{
     background-color: rgba(250,250,250,255);
     padding: 0rem 0rem 2rem 0rem;
@@ -74,11 +73,11 @@ article>img{
 }
 @media screen and (min-width:1440px) {
     /*14 columns x 8 rows*/
-    body{
+    main{
         grid-template-columns: repeat(14, 1fr);
         grid-template-rows:repeat(8, 1fr) ;
     }
-    body>*{
+    main>*{
         margin: 0.5rem;
     }
 
